--- a/StudentSupport/templates/student_mid_sem_feedback.html
+++ b/StudentSupport/templates/student_mid_sem_feedback.html
@@ -73,7 +73,7 @@
                 <div class="navbar-wrapper">
 
                     <div class="navbar-logo">
-                        <a href="{% url 'student_dashbaord' %}">
+                        <a href="{% url 'student_dashboard' %}">
                             <img class="img-fluid" src="{% static 'assets/images/logo_sss.png' %}" alt="Theme-Logo">
                         </a>
                     </div>
