--- a/StudentSupport/templates/principal/manage_departments.html
+++ b/StudentSupport/templates/principal/manage_departments.html
@@ -345,7 +345,7 @@
                                 </div>
                                 <ul class="show-notification profile-notification dropdown-menu" data-dropdown-in="fadeIn" data-dropdown-out="fadeOut">
                                     <li>
-                                        <a href="#">
+                                        <a href="{% url 'principal_profile' %}">
                                             <i class="feather icon-user"></i> Profile
                                         </a>
                                     </li>
@@ -368,7 +368,7 @@
                             <div class="pcoded-navigatio-lavel">Quick Links</div>
                             <ul class="pcoded-item pcoded-left-item">
                                 <li class="">
-                                    <a href="#">
+                                    <a href="{% url 'principal_profile' %}">
                                         <span class="pcoded-micon"><i class="feather icon-user"></i></span>
                                         <span class="pcoded-mtext">My Profile</span>
                                     </a>
