--- a/StudentSupport/templates/principal/principal_profile_page.html
+++ b/StudentSupport/templates/principal/principal_profile_page.html
@@ -221,28 +221,29 @@
                                                             <form action="{% url 'principal_profile' %}" method="post">
                                                                 {% csrf_token %}
                                                                 <div class="form-group row">
-                                                                    <label class="col-sm-3 col-form-label" style="padding: 6px 20px; font-weight:900;" for="oldpwd">Old Password :</label>
-                                                                    <div class="col-sm-6">
+                                                                    <label class="col-sm-3 col-md-3 col-lg-3 col-xl-3 col-form-label" style="padding: 6px 20px; font-weight:900;" for="oldpwd">Old Password :</label>
+                                                                    <div class="col-sm-9 col-md-9 col-lg-9 col-xl-9">
                                                                         <input type="password" class="form-control" id="oldpwd" name="oldpwd" required/>
                                                                     </div>
                                                                 </div>
-                                                                <div class="form-group row">
-                                                                    <label class="col-sm-3 col-form-label" style="padding: 6px 20px; font-weight:900;" for="newpwd">New Password :</label>
-                                                                    <div class="col-sm-6">
-                                                                        <input type="password" class="form-control" id="newpwd" name="newpwd" required/>
+                                                                <div class="form-group row" id="newpwd-div">
+                                                                    <label class="col-sm-3 col-md-3 col-lg-3 col-xl-3 col-form-label" style="padding: 6px 20px; font-weight:900;" for="newpwd">New Password :</label>
+                                                                    <div class="col-sm-9 col-md-9 col-lg-9 col-xl-9">
+                                                                        <input type="password" class="form-control" minlength="6" maxlength="16" id="newpwd" name="newpwd" onblur="validate_password()" required/>
+                                                                        <div id="Error_newpwd" style="display: none; color: red;"></div>
                                                                     </div>
                                                                 </div>
                                                                 <div class="form-group row">
-                                                                    <label class="col-sm-3 col-form-label" style="padding: 6px 20px; font-weight:900;" for="cnfrmpwd">Confirm Password :</label>
-                                                                    <div class="col-sm-6">
-                                                                        <input type="password" class="form-control" id="cnfrmpwd" name="cnfrmpwd" onchange="verify_pwd()" onkeyup="verify_pwd()" onclick="verify_pwd()" required/>
-                                                                        <span id="errormsg" style="color: red"></span>
+                                                                    <label class="col-sm-3 col-md-3 col-lg-3 col-xl-3 col-form-label" style="padding: 6px 20px; font-weight:900;" for="cnfrmpwd">Confirm Password :</label>
+                                                                    <div class="col-sm-9 col-md-9 col-lg-9 col-xl-9" id="cnfrmpwd-div">
+                                                                        <input type="password" class="form-control" minlength="6" maxlength="16" id="cnfrmpwd" name="cnfrmpwd" onchange="verify_pwd()" onkeyup="verify_pwd()" onclick="verify_pwd()" required/>
+                                                                        <div id="Error_cnfrmpwd" style="display: none; color: red;"></div>
                                                                     </div>
                                                                 </div>
                                                                 <div class="form-group row">
-                                                                    <label class="col-sm-3 col-form-label" style="padding: 6px 20px;"></label>
-                                                                    <div class="col-sm-6">
-                                                                        <button type="submit" class="btn btn-primary m-b-0">Update</button>
+                                                                    <label class="col-sm-3 col-md-3 col-lg-3 col-xl-3 col-form-label" style="padding: 6px 20px;"></label>
+                                                                    <div class="col-sm-9 col-md-9 col-lg-9 col-xl-9">
+                                                                        <button type="submit" class="btn btn-disabled" id="button-update" name="button-update" disabled>Update</button>
                                                                     </div>
                                                                 </div>
                                                             </form>
@@ -331,6 +332,62 @@
 
         });
     </script>
+
+    <!-- Validation js > Start -->
+    <script type="text/javascript">
+        function validate_password() {
+            var regularExpression = /^(?=.*\d)(?=.*[A-Z])(?=.*[a-z])(?=.*[a-zA-Z!@#$%&? "])[a-zA-Z0-9!@#$%&?]{6,16}$/;
+            var pwd = document.getElementById('newpwd').value;
+            var tag = document.getElementById('Error_newpwd');
+            if(regularExpression.test(pwd)){
+                tag.style.display = 'none';
+                document.getElementById("newpwd").classList.remove("form-control-danger");
+                document.getElementById("newpwd-div").classList.remove("has-danger");
+                document.getElementById("newpwd").classList.add("form-control-success");
+                return true;
+            }
+            else {
+                tag.innerHTML = "Password must have at least one uppercase, one lowercase, one digit and one special character. Length of password is 6 to 16.";
+                tag.style.display = 'block';
+                document.getElementById("newpwd").classList.add("form-control-danger");
+                document.getElementById("newpwd-div").classList.add("has-danger");
+                return false;
+            }
+        }
+
+        function verify_pwd() {
+            var pwd = document.getElementById('newpwd').value;
+            var pwd1 = document.getElementById('cnfrmpwd').value;
+            var tag = document.getElementById('Error_cnfrmpwd');
+            var div = document.getElementById('cnfrmpwd-div');
+            var btn = document.getElementById('button-update');
+            if(pwd !== pwd1) {
+                tag.style.display = 'block';
+                tag.innerHTML = "Password does not match";
+                document.getElementById('cnfrmpwd').classList.add('form-control-danger');
+                div.classList.add("has-danger");
+                btn.classList.remove('btn-primary');
+                btn.classList.add('btn-disabled');
+                btn.disabled = true;
+            }
+            else {
+                tag.style.display = 'none';
+                document.getElementById('cnfrmpwd').classList.remove('form-control-danger');
+                div.classList.remove("has-danger");
+                if(validate_password()) {
+                    btn.classList.remove('btn-disabled');
+                    btn.classList.add('btn-primary');
+                    btn.disabled = false;
+                }
+                else {
+                    btn.classList.remove('btn-primary');
+                    btn.classList.add('btn-disabled');
+                    btn.disabled = true;
+                }
+            }
+        }
+    </script>
+    <!-- Validation js > End -->
 
 </body>
 
